Fixing minor bugs

--- a/Location-Python.ipynb
+++ b/Location-Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "float"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "'Saltlake,[Kolkata, West Bengal, IN]'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,27 +108,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'position': 1,\n",
-       "  'title': 'Frankross Pharmacy Bangur Avenue',\n",
-       "  'link': 'https://www.frankrosspharmacy.com/',\n",
-       "  'address': 'SHOP NO. G-5, 135, Bangur Ave +91 90731 90127',\n",
-       "  'data_cid': '6356844915546219031',\n",
-       "  'image': 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwBAMAAAClLOS0AAAAIVBMVEUAAAAzplM0qFQ0qFM0qFM1qFM0qFQ1qlU0qFM0qFMwr1BfNzQuAAAAC3RSTlMAKGfn/2+PGK/XELDg06MAAABgSURBVHgB7cuxDUBQAEXRp6FnFSM8Ep0RFAZQGkTyZ7AlyWtvoZZ/+qMvql6sGVehwZM4eOZgb38L58GhuwqH28tBQa1dKEj7WyCkUEhJgJIAJQFKApQEKAlQEqAkqHoA3HYhBITCjCcAAAAASUVORK5CYII',\n",
-       "  'extensions': ['Open now', '+91 90731 90127'],\n",
-       "  'type': 'Pharmacy',\n",
-       "  'block_position': 1},\n",
-       " {'position': 2,\n",
        "  'title': 'Seva Medical Store',\n",
        "  'link': 'https://seva-medical-store.business.site/',\n",
        "  'address': '271/283/2, Bangur Avenue, Block-B,',\n",
        "  'data_cid': '13915545150265296789',\n",
        "  'extensions': ['Open', 'Closes 11PM', '+91 98365 09521'],\n",
+       "  'type': 'Pharmacy',\n",
+       "  'block_position': 1},\n",
+       " {'position': 2,\n",
+       "  'title': 'Frankross Pharmacy Bangur Avenue',\n",
+       "  'link': 'https://www.frankrosspharmacy.com/',\n",
+       "  'address': 'SHOP NO. G-5, 135, Bangur Ave +91 90731 90127',\n",
+       "  'data_cid': '6356844915546219031',\n",
+       "  'image': 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwBAMAAAClLOS0AAAAIVBMVEUAAAAzplM0qFQ0qFM0qFM1qFM0qFQ1qlU0qFM0qFMwr1BfNzQuAAAAC3RSTlMAKGfn/2+PGK/XELDg06MAAABgSURBVHgB7cuxDUBQAEXRp6FnFSM8Ep0RFAZQGkTyZ7AlyWtvoZZ/+qMvql6sGVehwZM4eOZgb38L58GhuwqH28tBQa1dKEj7WyCkUEhJgJIAJQFKApQEKAlQEqAkqHoA3HYhBITCjCcAAAAASUVORK5CYII',\n",
        "  'type': 'Pharmacy',\n",
        "  'block_position': 1},\n",
        " {'position': 3,\n",
@@ -141,7 +140,7 @@
        "  'block_position': 1}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,6 +148,30 @@
    "source": [
     "names=result_json['local_results']\n",
     "names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in names:\n",
+    "    if 'extensions' not in name:\n",
+    "        print('0')\n",
+    "    else:\n",
+    "        print('1')\n",
+    "    "
    ]
   },
   {
